# rag-pipeline-langchain

./: .gitignore  app.py  pyproject.toml  requirements.txt
notebook/: document.ipynb  pdf_loader.ipynb
src/: chroma_vectorstore.py  document_loader.py  embeddings.py  models.py  search.py  vectorstore.py
src/prompts/: prompts_v1.py
