[project]
name = "langchain-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.5",
    "faiss-cpu>=1.13.0",
    "langchain[openai]>=1.0.7",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.5",
    "pymupdf>=1.26.6",
    "pypdf>=6.3.0",
    "sentence-transformers>=5.1.2",
    "tqdm>=4.67.1",
    "python-dotenv>=1.2.1",
]
